--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -6,7 +6,7 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
-    branches: [ "master" ]
+    branches: [ "dep-inclusions" ]
   pull_request:
     branches: [ "master" ]
 
@@ -30,7 +30,22 @@ jobs:
         run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Use Node.js
+        run: actions/setup-node@v2
+        with:
+          node-version: '14.x'
+            # Install project dependencies
+      - name: Install dependencies
+        run: npm install
+        
+  # Deploy To Heroku
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.12.12 
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "comp3104-devops-101334588" #Must be unique in Heroku
+          heroku_email: "sarah7sami@gmail.com"
