--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,10 +30,10 @@ jobs:
         run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
-      - name: Use Node.js
-        run: actions/setup-node@v2
-        with:
-          node-version: '14.x'
+      - name: Use node js
+        uses: actions/setup-node@v2
+        with: 
+          node-version: "14.x"
 
       # Install project dependencies
       - name: Install dependencies
